--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+<div class="login-container">
+  <h2>Login</h2>
+  <button mat-raised-button color="primary" (click)="login()">Login</button>
+</div>
